08/09 U Updated FAQ file regarding bug #314                       [#314]
08/08 U Updated Spanish language file (es.l)                      [ #00]
08/07 U Updated GeoIP database file                               [ #00]
07/18 U Updated GeoIP database file                               [ #00]
01/06 U Updated GeoIP.dat                                         [ #00]
08/23 F Fixed issue with not registered users on P10              [#416]
08/19 F Fixed admin table scheme not mysql 4.0 compatible         [ #00]
08/17 F smiley counting was wrong on x64 boxes                    [#411]
08/16 F Denora can load one protocol each time                    [ #00]
08/15 F Fixed crash on xmlrpc connection                          [#403]
08/13 F [nefarious] Local kills are now detected                  [#404]
08/13 F [bahamut] Local kills are now detected                    [#404]
08/11 F [inspircd11] CAPAB support                                [ #00]
08/11 F Fixed SQUIT not handled properly on P10 IRCds             [#395]
08/10 F [inspircd11] Local kills are now detected                 [#404]
08/10 F Fixed broken behavior on certain server splits            [#347]
08/10 F Local kills are now detected by Denora (Unreal32 only)    [#404]
08/09 F Fixed syntax error in include/version.sh                  [ #00]
08/08 F Inactive channels now get cleared from chan.db as well    [#355]
08/08 F [inspircd11] Fixed autoop not working                     [#378]
08/06 F [inspircd11] Fixed opers counted twice on burst           [#394]
08/03 F [inspircd11] fixed server uptime not being caught         [ #00]
08/03 F [inspircd11] fixed server MOTDs not working               [ #00]
08/03 F [inspircd11] ulined servers not being marked as ulined    [#382]
08/02 F Fixed admin struct not being cleaned up on reload         [#381]
08/01 F EVENT_USER_PART referenced freed memory                   [#386]
08/01 F Passwords are now hidden from log on ADMIN ADD/SETPASS    [#402]