@@ -29,6 +29,7 @@ Provided by Denora Team <dev@denorastats.org> - 2007
 08/07 U Updated GeoIP database file                               [ #00]
 07/18 U Updated GeoIP database file                               [ #00]
 01/06 U Updated GeoIP.dat                                         [ #00]
+08/26 F Fixed query problem in chanstats on some x64 boxes        [ #00]
 08/23 F Fixed issue with not registered users on P10              [#416]
 08/19 F Fixed admin table scheme not mysql 4.0 compatible         [ #00]
 08/17 F smiley counting was wrong on x64 boxes                    [#411]
